--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,7 +18,7 @@
     linkedin: https://www.linkedin.com/in/bluet/
     mastodon: https://g0v.social/@bluet
 江明宗:
-    status: current
+    status: former
     name: 江明宗
     name_en: Finjon Kinag (kiang)
     description: 應用架構總顧問
